[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"
description = "A collection of helper functions for the book (Cracking the coding interview)"
authors = ["Ahmad khatib <ahmadkhatib923@gmail.com>"]
license = "MIT"
repository = "https://github.com/ahmad-khatib0/data-science"

[dependencies]
rand = "0.9.0"
